--- a/src/index.css
+++ b/src/index.css
@@ -10,19 +10,19 @@
 .loader {
   width: 20px;
   height: 20px;
-  border: 2px solid #6546E2;
+  border: 2px solid #6546e2;
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
-  }
+}
 
-  @keyframes rotation {
+@keyframes rotation {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
